@@ -1,3 +1,9 @@
+2017-03-21  Martin Sebor  <msebor@redhat.com>
+
+	PR c++/79548
+	* c-common.c (set_underlying_type): Mark type used only when
+	original del is declared unused.
+
 2017-01-24  Richard Biener  <rguenther@suse.de>
 
 	Backport from mainline
